--- a/week_3_dvc/requirements.txt
+++ b/week_3_dvc/requirements.txt
@@ -1,4 +1,4 @@
-pytorch-lightning==1.2.10
+pytorch-lightning==1.6.0
 datasets==1.6.2
 transformers==4.5.1
 scikit-learn==0.24.2
@@ -9,3 +9,4 @@ seaborn
 hydra-core
 omegaconf
 hydra_colorlog
+numpy==1.23.1
